added find methods in UsersProjecRepository and refacted method in service for its